Code smells fixed.